--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unifont Color Emoji</title>
+    <title>Unifont Glyph Modifications and Extensions</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -142,7 +142,7 @@
 </head>
 
 <body>
-    <h1>Unifont Glyph Modifications Extensions</h1>
+    <h1>Unifont Glyph Modifications and Extensions</h1>
 
     <fieldset>
         <legend>Scale</legend>
