--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <ul>
         <li>
             <strong>Be simple</strong> enough to fit with the look, feel, and philosophy of Unifont. Human16 uses only
-            16 colors, with no two colors being too similar.
+            16 colors, with no two colors being too similar. An efficient glyph encoding can be derived analogous to the
+            .hex format used for existing Unifont glyphs, using four bits per pixel instead of one.
         </li>
         <li>
             <strong>Be compatible</strong> with all existing emoji characters and their expected presentations. Human16
