--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </li>
         <li>
             Create separate fonts for text style vs emoji style. There is precedence for this approach with the
-            Japanese versions of the CJK glyphs in planes 0 and 1. A similar approach could be used for emoji at the
+            Japanese versions of the CJK glyphs. A similar approach could be used for emoji at the
             expense of multiplying the number of charts and fonts. It would also have to be decided whether the text
             style version of the font would include emoji code points which do not have text styles.
         </li>
