Minor wording edit

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 
     <h3>Color Palette</h3>
 
+    <p>
+        The color palette used for the color glyphs is a custom palette called &ldquo;Human16&rdquo;.
+    </p>
+
     <ul class="palette">
         <li><div class="red"></div></li>
         <li><div class="pink"></div></li>
@@ -56,8 +60,7 @@
     </ul>
 
     <p>
-        The color palette used for the color glyphs, called &ldquo;Human16&rdquo;, was carefully designed with the
-        following goals:
+        The Human16 palette was carefully designed with the following goals in mind:
     </p>
 
     <ul>
