--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
     </p>
 
     <p>
-        If the character has a default emoji presentation, the <b>emoji</b> column will be outlined in yellow;
-        otherwise, the <b>text</b> column will be outlined. If Unifont adopts these new designs, they will have to
+        If the character has a default emoji presentation, the <b>Emoji</b> column will be outlined in yellow;
+        otherwise, the <b>Text</b> column will be outlined. If Unifont adopts these new designs, they will have to
         decide which variants to use. Listed below are a few possibilities:
     </p>
 
