Update display of text style default emoji

--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
     </p>
 
     <p>
-        If the character has a default emoji presentation, the <b>Emoji</b> column will be outlined in yellow;
-        otherwise, the <b>Text</b> column will be outlined. If Unifont adopts these new designs, they will have to
-        decide which variants to use. Listed below are a few possibilities:
+        If the character has a default text style presentation, the glyph in the <b>Unifont</b> column will be outlined
+        in yellow. If Unifont adopts the new designs, they will have to decide whether to use the text style or emoji
+        style glyph variant for the characters that have variations. Listed below are a few possibilities:
     </p>
 
     <ul>
         <li>
-            Use the default style (outlined in yellow). This aligns with many of the glyph designs in Unifont 16.0.02.
-            This may align the most with user expectations in most cases, although a few edge cases may cause confusion.
+            Use the default style. This aligns with many of the glyph designs in Unifont 16.0.02. This may align the
+            most with user expectations in most cases, although a few edge cases may cause confusion.
         </li>
         <li>
             Always use the text style when one exists. This may be a good choice considering that Unifont does not
