--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
     <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -26,7 +26,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Noto+Emoji:wght@300..700&family=Noto+Sans+Symbols:wght@100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&family=Noto+Emoji:wght@300..700&family=Noto+Sans+Symbols:wght@100..900&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="styles/style.css">
 
@@ -58,22 +60,54 @@
     </p>
 
     <ul class="palette">
-        <li><div class="red"></div></li>
-        <li><div class="pink"></div></li>
-        <li><div class="orange"></div></li>
-        <li><div class="yellow"></div></li>
-        <li><div class="green"></div></li>
-        <li><div class="light-blue"></div></li>
-        <li><div class="blue"></div></li>
-        <li><div class="purple"></div></li>
-        <li><div class="black"></div></li>
-        <li><div class="gray"></div></li>
-        <li><div class="white"></div></li>
-        <li><div class="skin1"></div></li>
-        <li><div class="skin2"></div></li>
-        <li><div class="skin3"></div></li>
-        <li><div class="skin4"></div></li>
-        <li><div class="skin5"></div></li>
+        <li>
+            <div class="red"></div>
+        </li>
+        <li>
+            <div class="pink"></div>
+        </li>
+        <li>
+            <div class="orange"></div>
+        </li>
+        <li>
+            <div class="yellow"></div>
+        </li>
+        <li>
+            <div class="green"></div>
+        </li>
+        <li>
+            <div class="light-blue"></div>
+        </li>
+        <li>
+            <div class="blue"></div>
+        </li>
+        <li>
+            <div class="purple"></div>
+        </li>
+        <li>
+            <div class="black"></div>
+        </li>
+        <li>
+            <div class="gray"></div>
+        </li>
+        <li>
+            <div class="white"></div>
+        </li>
+        <li>
+            <div class="skin1"></div>
+        </li>
+        <li>
+            <div class="skin2"></div>
+        </li>
+        <li>
+            <div class="skin3"></div>
+        </li>
+        <li>
+            <div class="skin4"></div>
+        </li>
+        <li>
+            <div class="skin5"></div>
+        </li>
     </ul>
 
     <p>
@@ -95,15 +129,20 @@
             &ldquo;brown&rdquo; color).
         </li>
         <li>
-            <strong>Be accessible.</strong> Human16 incorporates the <a href="https://x.com/bangwong/status/492662880760655873">colorblind
-            safe palette</a> used by Bang Wong (<cite><a href="https://jfly.uni-koeln.de/html/manuals/pdf/color_blind.pdf">original
-            source</a></cite>; see also <cite><a href="https://doi.org/10.1038/nmeth.1618">Wong, B. Points of view:
-            Color blindness. <i>Nat Methods</i> <b>8</b>, 441 (2011)</a></cite> for more details). This palette is
+            <strong>Be accessible.</strong> Human16 incorporates the <a
+                href="https://x.com/bangwong/status/492662880760655873">colorblind
+                safe palette</a> used by Bang Wong (<cite><a
+                    href="https://jfly.uni-koeln.de/html/manuals/pdf/color_blind.pdf">original
+                    source</a></cite>; see also <cite><a href="https://doi.org/10.1038/nmeth.1618">Wong, B. Points of
+                    view:
+                    Color blindness. <i>Nat Methods</i> <b>8</b>, 441 (2011)</a></cite> for more details). This palette
+            is
             expanded by adding a carefully selected shade of purple and gray.
         </li>
         <li>
             <strong>Be inclusive.</strong> Rather than the Fitzpatrick scale, Human16 derives its skin tone colors from
-            <cite><a href="https://skintone.google/the-scale">Monk, Ellis. &ldquo;Monk Skin Tone Scale,&rdquo; 2019</a></cite>.
+            <cite><a href="https://skintone.google/the-scale">Monk, Ellis. &ldquo;Monk Skin Tone Scale,&rdquo;
+                    2019</a></cite>.
             This scale is more modern, inclusive, and representative than the Fitzpatrick scale which is primary a
             dermatological tool and has been criticized for its Eurocentric bias and insufficient representation of
             global skin color diversity. The specific tones have been modified to better match the the rest of the
@@ -116,7 +155,7 @@
     <p>
         The following lists the new glyph designs. The <b>Unifont</b> column shows the current glyph in Unifont 16.0.02.
         The <b>New</b> columns show the new glyph designs in text style, monochrome emoji style, and color emoji style.
-        Only characters with emoji variation sequences have text style variants.  Note that sequences never have text
+        Only characters with emoji variation sequences have text style variants. Note that sequences never have text
         style presentations (ignoring the special case keycap sequences).
     </p>
 
@@ -158,44 +197,47 @@
         is free to use, redistribute, or even take over these fonts when they become available.
     </p>
 
-    <fieldset>
-        <legend>Glyphs</legend>
 
-        <span class="control-group">
-            <label>Category</label>
-            <br>
-            <select name="smileys-and-emotion" id="category"></select>
-        </span>
-        <span class="control-group">
-            <label>Scale</label>
-            <br>
-            <label><input type="radio" name="scale" value="1" id="scale1x"> 1&#xD7;</label>
-            <label><input type="radio" name="scale" value="2" id="scale2x" checked> 2&#xD7;</label>
-            <label><input type="radio" name="scale" value="3" id="scale3x"> 3&#xD7;</label>
-            <label><input type="radio" name="scale" value="4" id="scale4x"> 4&#xD7;</label>
-        </span>
-    </fieldset>
-    
-    <table id="glyphs">
-        <thead>
-            <tr>
-                <th colspan="2">Unicode</th>
-                <th colspan="1">Unifont</th>
-                <th colspan="3">New</th>
-            </tr>
-            <tr>
-                <th class="code">Code</th>
-                <th class="name">CLDR Short Name</th>
+    <div id="glyphs">
+        <fieldset>
+            <legend>Glyphs</legend>
 
-                <th class="unifont">16.0.02</th>
+            <span class="control-group">
+                <label>Category</label>
+                <br>
+                <select name="smileys-and-emotion" id="category"></select>
+            </span>
+            <span class="control-group">
+                <label>Scale</label>
+                <br>
+                <label><input type="radio" name="scale" value="1" id="scale1x"> 1&#xD7;</label>
+                <label><input type="radio" name="scale" value="2" id="scale2x" checked> 2&#xD7;</label>
+                <label><input type="radio" name="scale" value="3" id="scale3x"> 3&#xD7;</label>
+                <label><input type="radio" name="scale" value="4" id="scale4x"> 4&#xD7;</label>
+            </span>
+        </fieldset>
 
-                <th class="text">Text</th>
-                <th class="emoji">Emoji</th>
-                <th class="color">Color</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2">Unicode</th>
+                    <th colspan="1">Unifont</th>
+                    <th colspan="3">New</th>
+                </tr>
+                <tr>
+                    <th class="code">Code</th>
+                    <th class="name">CLDR Short Name</th>
+
+                    <th class="unifont">16.0.02</th>
+
+                    <th class="text">Text</th>
+                    <th class="emoji">Emoji</th>
+                    <th class="color">Color</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 </body>
 
 </html>
