Update some sprites per a suggestion

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         This work aims to make the Unifont emoji glyphs more closely match the Emoji and CLDR definitions (especially the
         <a href="https://www.unicode.org/reports/tr51/#Design_Guidelines">Design Guidelines</a> section of
         <cite>Unicode&#xAE; Technical Standard #51</cite>), more internally consistent, and reasonably consistent with
-        the familiar shapes and designs mostly commonly used in industry practice. This last point is explicitly recommended
-        by <cite>Unicode&#xAE; Technical Standard #51</cite>.
+        the familiar shapes and designs mostly commonly used in industry practice. This last point is explicitly
+        recommended by <cite>Unicode&#xAE; Technical Standard #51</cite> for improved interoperability.
     </p>
 
     <p>This work also extends Unifont emoji glyphs by including:</p>
