--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <link rel="stylesheet" href="styles/style.css">
 
     <script src="scripts/emoji-data.js" defer></script>
+    <script src="scripts/emoji-presentation.js" defer></script>
+    <script src="scripts/variations.js" defer></script>
     <script src="scripts/script.js" defer></script>
 </head>
 
